--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -905,5 +905,7 @@ config RICHTAP_FOR_PMIC_ENABLE
 	  Say Y here if your device support AAC RichTap moto device.
 
 source "drivers/input/misc/rbs_fod_mmi/Kconfig"
+source "drivers/input/misc/fpc_fps_mmi/Kconfig"
+source "drivers/input/misc/goodix_fod_mmi/Kconfig"
 
 endif
