--- a/drivers/media/platform/msm/Kconfig
+++ b/drivers/media/platform/msm/Kconfig
@@ -2,3 +2,4 @@
 
 source "drivers/media/platform/msm/synx/Kconfig"
 source "drivers/media/platform/msm/cvp/Kconfig"
+source "drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kconfig"
