--- a/drivers/media/platform/msm/Makefile
+++ b/drivers/media/platform/msm/Makefile
@@ -3,3 +3,4 @@
 obj-$(CONFIG_MSM_GLOBAL_SYNX) += synx/
 obj-$(CONFIG_MSM_GLOBAL_SYNX_V2) += synx/
 obj-$(CONFIG_MSM_CVP) += cvp/
+obj-$(CONFIG_CAMERA_CCI_INTF) += camera/cam_sensor_module//cam_cci/
